# nba_scoreboard

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  start.sh
NBAScoreboard/: CLAUDE.md  Dockerfile  Dockerfile.prod  README.md  index.html  nginx.conf  package-lock.json  package.json  plan.md  vite.config.js
NBAScoreboard/docs/: team_crosswalk.md
NBAScoreboard/src/: App.jsx  main.jsx  new_component.md  refactor.md
NBAScoreboard/test/: frontend-test.js  load-test.js  test.js  ws-test.js
nba_scoreboard_api/: .dockerignore  Dockerfile  Dockerfile.prod  requirements.txt
nba_scoreboard_api/api/: __init__.py  alembic.ini  error_source.txt  errors.txt  main.py  pyproject.toml
nba_scoreboard_api/api/alembic/: env.py  script.py.mako
nba_scoreboard_api/api/alembic/versions/: 2025_02_17_add_games_table.py  2025_02_17_initial.py
nba_scoreboard_api/api/app/api/v1/: __init__.py
nba_scoreboard_api/api/app/api/v1/endpoints/: __init__.py  players.py  scoreboard.py  standings.py
nba_scoreboard_api/api/app/core/: config.py  database.py
nba_scoreboard_api/api/app/models/: __init__.py  players.py  scoreboard.py  standings.py
nba_scoreboard_api/api/app/schemas/: __init__.py  players.py  scoreboard.py  standings.py
nba_scoreboard_api/api/app/services/: __init__.py  nba_api_utils.py  players.py  scoreboard.py  standings.py
nba_scoreboard_api/docs/: API.md  API_docs_v2.md
nba_scoreboard_api/examples/: scoreboard_v2.py
nba_scoreboard_api/src/: config.py  database.py  fetch_images.py  main.py  models.py  (+1 more)
(+47 files in other folders)
