[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nba-scoreboard-api"
version = "1.0.0"
description = "FastAPI application for NBA scores and statistics"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.103.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.3.0",
    "pydantic-settings>=2.0.3",
    "python-dotenv>=1.0.0",
    "SQLAlchemy>=2.0.0",
    "alembic>=1.12.0",
    "nba_api>=1.2.1",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    "httpx>=0.24.1",
    "requests>=2.31.0",
    "pandas>=2.0.0"
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]
addopts = "--cov=app"
testpaths = [
    "tests",
]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3